--- a/DiningPhilosophers.vcxproj
+++ b/DiningPhilosophers.vcxproj
@@ -22,7 +22,6 @@
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
     <ProjectGuid>{3ca9ea00-48b4-4228-a607-e008e2f25fc2}</ProjectGuid>
-    <RootNamespace>DiningPhilosophers</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -119,6 +118,7 @@
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>include/</AdditionalIncludeDirectories>
+      <MultiProcessorCompilation>true</MultiProcessorCompilation>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -143,11 +143,20 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="src/main.cpp" />
+    <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\chopstick.cpp" />
+    <ClCompile Include="src\speaker.cpp" />
     <ClCompile Include="src\philosopher.cpp" />
+    <ClCompile Include="src\table.cpp" />
+    <ClCompile Include="src\utils.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="include\chopstick.hpp" />
+    <ClInclude Include="include\message.hpp" />
+    <ClInclude Include="include\speaker.hpp" />
     <ClInclude Include="include\philosopher.hpp" />
+    <ClInclude Include="include\table.hpp" />
+    <ClInclude Include="include\utils.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
