Fixing data race issues, adding a theme to the meal, chaning a bit the architecture

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-5_Sages/.vs
-5_Sages/Debug
-5_Sages/x64
-5_Sages/5_Sages/x64
-5_Sages/5_Sages/Debug
+5_Sages/.vs/**
+5_Sages/Debug/**
+5_Sages/x64/**
+5_Sages/5_Sages/x64/**
+5_Sages/5_Sages/Debug/**
