Improving the diplay, adding a clock, improving the story

--- a/5_Sages/5_Sages/5_Sages.vcxproj
+++ b/5_Sages/5_Sages/5_Sages.vcxproj
@@ -142,6 +142,7 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="chopstick.cpp" />
+    <ClCompile Include="message.cpp" />
     <ClCompile Include="speaker.cpp" />
     <ClCompile Include="wiseman.cpp" />
     <ClCompile Include="table.cpp" />
