--- a/5_Sages/5_Sages/5_Sages.vcxproj.filters
+++ b/5_Sages/5_Sages/5_Sages.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="speaker.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
+    <ClCompile Include="message.cpp">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="wiseman.h">
